--- a/src/ReviewForm.css
+++ b/src/ReviewForm.css
@@ -81,9 +81,18 @@
     border-radius: 5px;
     color: #c7d5e0;
     border: 1px solid #000;
-    transition: background-color 0.2s;
+    transition: background-color 0.2s, border 0.2s;
 }
 
 .recommend-options div:hover {
     background-color: #2c3e50;
 }
+
+/* Khi được chọn */
+.recommend-options .selected {
+    /* border: 2px solid white; */
+    background-color: #3b4b5b;
+}
+
+
+
