--- a/src/pages/SendGameToAdmin.css
+++ b/src/pages/SendGameToAdmin.css
@@ -146,6 +146,11 @@
     object-fit: cover;
     border-radius: 5px;
   }
+  .inner-image button{
+    width: 150px;
+    height: 100px;
+    border-radius: 5px;
+  }
   .game-file {
     width: 80%;
     padding: 10px;
