complete game approve and game adding

--- a/src/pages/GameApprovePage.css
+++ b/src/pages/GameApprovePage.css
@@ -84,3 +84,10 @@ button:active {
     text-decoration: underline;
     text-underline-offset: 5px;
 }
+
+.request-item{
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding: 10px;
+}
