--- a/src/components/Logout.css
+++ b/src/components/Logout.css
@@ -24,20 +24,7 @@
 .logout-buttons {
   display: flex;
   justify-content: space-around;
-  margin-top: 1.5rem;
+  /* margin-top: 1.5rem; */
 }
 
-.logout-buttons button {
-  padding: 10px 20px;
-  border: none;
-  border-radius: 8px;
-  font-weight: bold;
-  cursor: pointer;
-  background-color: #007bff;
-  color: white;
-}
 
-.logout-buttons button:first-child {
-  background-color: #ccc;
-  color: black;
-}
