Refactor: clean up unnessary folders & files. Feature: adding BS5 to index.html to starting using BS5. WIP: Refactoring all design follow up/ redesign with BS5.

--- a/src/pages/AdminHeader.css
+++ b/src/pages/AdminHeader.css
@@ -1,4 +1,4 @@
-.steam-header .active{
+.steam-header .user-actions .active{
     text-decoration: underline;
     font-weight: bold;
     color: #1999FF;
