--- a/src/pages/AdminHeader.css
+++ b/src/pages/AdminHeader.css
@@ -1,5 +1,9 @@
-.steam-header .user-actions .active{
+.header-nav .active{
     text-decoration: underline;
     font-weight: bold;
     color: #1999FF;
+}
+
+.header-nav a{
+    cursor: pointer;
 }
