--- a/src/components/Navbar/Navbar.css
+++ b/src/components/Navbar/Navbar.css
@@ -10,8 +10,7 @@
 .store-header .content {
   height: 66px;
   position: relative;
-  width: 940px;
-  margin: 0 auto;
+  width: 100%;
   z-index: 300;
   color: #c6d4df;
   font-size: 12px;
