--- a/src/pages/GameDetail/GameDetail.css
+++ b/src/pages/GameDetail/GameDetail.css
@@ -133,13 +133,6 @@
   color: #ffffff;
 }
 
-/* KHU VỰC MUA GAME */
-.purchase-area {
-  margin-top: auto;
-  /* Đẩy xuống cuối nếu cột info cao hơn */
-}
-
-
 
 /* ---- PHẦN DƯỚI ---- */
 .bottom-content-container {
@@ -165,36 +158,7 @@
   font-weight: normal;
 }
 
-.description-body {
-  font-size: 14px;
-  line-height: 1.6;
-  color: #acb2b8;
-}
 
-.requirements-grid {
-  display: grid;
-  grid-template-columns: max-content 1fr;
-  gap: 4px 15px;
-  font-size: 12px;
-  color: #acb2b8;
-}
-
-.requirements-grid strong {
-  color: #8f98a0;
-}
-
-.review-section-container {
-  margin-top: 30px;
-}
-
-.review-section-container h2 {
-  font-size: 14px;
-  color: #556772;
-  letter-spacing: 2px;
-  text-transform: uppercase;
-  margin-bottom: 15px;
-  font-weight: normal;
-}
 
 .game-detail-header-container {}
 
@@ -262,6 +226,8 @@
 
 .gameHeaderImgCtn img {
   width: 100%;
+  max-height: 180px;
+  object-fit: cover;
 }
 
 .purchase-box {
@@ -332,4 +298,49 @@
 
 .btn-green-ui:hover span {
   background: linear-gradient(to right, #8ed629 5%, #6aa621 95%);
+}
+
+/* Detail System .jsx */
+
+.game-detail-system-container {}
+
+.game-detail-system-container h2,
+.game-detail-system-container h3 {
+  padding: 0;
+  margin: 0;
+  font-size: medium;
+}
+
+.game-detail-system-container .line-seperate {
+  background: linear-gradient(90deg, rgb(58, 110, 139), rgb(58 110 139 / 0%));
+  height: 2px;
+}
+
+.game-detail-system-container .system-content {
+  margin-top: 1rem;
+}
+
+.minimum-section,
+.recommend-section {
+  flex: 1;
+  display: flex;
+  flex-direction: column;
+  font-size: 12px;
+  color: #acb2b8;
+  gap: 5px 15px;
+}
+
+.minimum-section .req-row,
+.recommend-section .req-row {
+  width: 100%;
+  display: flex;
+  flex-direction: row;
+  column-gap: 5px;
+}
+
+.req-row span,
+.req-row strong {}
+
+.minimum-section strong {
+  color: #8f98a0;
 }
