--- a/src/pages/ApplyToPublisher.css
+++ b/src/pages/ApplyToPublisher.css
@@ -1,10 +1,12 @@
 .apply-publisher-title {
+  margin-top: 50px;
     font-size: 22px; 
     font-weight: bold;
     text-align: left;
     margin-left: 20%;
     width: 100%;
     margin-bottom: 20px;
+    color: #ccc;
   }
   
   .apply-publisher-container {
@@ -14,6 +16,7 @@
     gap: 10%;
     width: 60%;
     margin: 0 auto; /* Center it */
+    color: #ccc;
   }
   
   .publisher-info {
@@ -55,6 +58,7 @@
 }
 .publisher-button{
   margin-top: 50px;
+  margin-bottom: 50px;
   display: flex;
   flex-direction: row;
   justify-content: space-evenly;
