--- a/src/pages/SendGameToAdmin.css
+++ b/src/pages/SendGameToAdmin.css
@@ -60,7 +60,7 @@
 .name-price input {
   color: white;
   width: 80%;
-  height: 20px;
+  /* height: 20px; */
   /* Reduced height */
   padding: 10px;
   font-size: 18px;
@@ -104,7 +104,7 @@
 .sys-req textarea {
   color: white;
   width: 100%;
-  height: 20px;
+  /* height: 20px; */
   padding: 10px;
   font-size: 18px;
   border: none;
